// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing page deployment HomeList test 1 component matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-3 d-flex justify-content-center col-xl-3 col-lg-4 col-md-6 col-12"
      >
        <div
          class="shadow-lg bg-color2 card"
          style="width: 18rem;"
        >
          <a
            href="#/country/MockCountry1"
          >
            <img
              alt="MockCountry1"
              class="card-img-top p-2"
              src="www.mockflag.com/1"
            />
          </a>
          <div
            class="d-flex flex-column justify-content-evenly card-body"
          >
            <div
              class="text-center card-title h5"
              style="font-weight: 600; font-size: 24px;"
            >
              MockCountry1
            </div>
            <div
              class="text-center card-subtitle h6"
              style="font-weight: 500;"
            >
              MockCapital1
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="my-3 d-flex justify-content-center col-xl-3 col-lg-4 col-md-6 col-12"
    >
      <div
        class="shadow-lg bg-color2 card"
        style="width: 18rem;"
      >
        <a
          href="#/country/MockCountry1"
        >
          <img
            alt="MockCountry1"
            class="card-img-top p-2"
            src="www.mockflag.com/1"
          />
        </a>
        <div
          class="d-flex flex-column justify-content-evenly card-body"
        >
          <div
            class="text-center card-title h5"
            style="font-weight: 600; font-size: 24px;"
          >
            MockCountry1
          </div>
          <div
            class="text-center card-subtitle h6"
            style="font-weight: 500;"
          >
            MockCapital1
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing page deployment HomeList test 2 component matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-3 d-flex justify-content-center col-xl-3 col-lg-4 col-md-6 col-12"
      >
        <div
          class="shadow-lg bg-color2 card"
          style="width: 18rem;"
        >
          <a
            href="#/country/MockCountry2"
          >
            <img
              alt="MockCountry2"
              class="card-img-top p-2"
              src="www.mockflag.com/2"
            />
          </a>
          <div
            class="d-flex flex-column justify-content-evenly card-body"
          >
            <div
              class="text-center card-title h5"
              style="font-weight: 600; font-size: 24px;"
            >
              MockCountry2
            </div>
            <div
              class="text-center card-subtitle h6"
              style="font-weight: 500;"
            >
              MockCapital2
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="my-3 d-flex justify-content-center col-xl-3 col-lg-4 col-md-6 col-12"
    >
      <div
        class="shadow-lg bg-color2 card"
        style="width: 18rem;"
      >
        <a
          href="#/country/MockCountry2"
        >
          <img
            alt="MockCountry2"
            class="card-img-top p-2"
            src="www.mockflag.com/2"
          />
        </a>
        <div
          class="d-flex flex-column justify-content-evenly card-body"
        >
          <div
            class="text-center card-title h5"
            style="font-weight: 600; font-size: 24px;"
          >
            MockCountry2
          </div>
          <div
            class="text-center card-subtitle h6"
            style="font-weight: 500;"
          >
            MockCapital2
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
